--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>Liz Bird</title>
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
     </head>
 
     <body>
-        <p>Press the spacebar to jump!!!</p>
         <div id="stage"></div>
 
         <script type="text/javascript" src="assets/js/phaser.min.js"></script>
