Added css to html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
+        <link rel="stylesheet" href="assets/css/LizBird.css">
     </head>
 
     <body>
