--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
+        <link rel="stylesheet" href="assets/css/LizBird.css">
     </head>
 
     <body>
-        <p>Press the spacebar to jump!!!</p>
         <div id="stage"></div>
 
         <script type="text/javascript" src="assets/vendor/phaser/build/phaser.min.js"></script>
