Upated phaser.io slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -28,8 +28,9 @@ URL: https://code.google.com/p/io-2012-slides
 <slides class="layout-widescreen">
 
   <slide class="title-slide nobackground phaser" style="text-align:center">
-    <hgroup class="auto-fadein" style="margin-top:200px">
-      <h1 data-config-title style="padding-top:170px;text-align:right"><!-- populated from slide_config.json --></h1>
+    <hgroup class="auto-fadein">
+        <img src="images/phaser-logo-small.png" width="40%">
+      <h1 data-config-title style="padding-top:20px;text-align:right"><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle class="small" style="margin-top:0;text-align:right !important;"><!-- populated from slide_config.json --></h2>
     </hgroup>
 
